# pulse_generator

./: .flake8  README.md  pyproject.toml
pulse_generator/: cli.py  configs.py  engine.py  key.py  parts.py  pulser.py  ui.py  ui.tcss
scripts/: bashrc.sh  deploy_code.sh  install.sh  override.conf  play_sine.py  terminal_only.sh  textual_example.py  textual_example.tcss
tests/: conftest.py  test_pulse_generator.py
