[tool.poetry]
name = "pulse-generator"
version = "0.1.0"
description = ""
authors = ["Entaroadun <pawel.matykiewicz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sounddevice = "^0.4.6"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
