[tool.poetry]
name = "pulse-generator"
version = "0.1.0"
description = ""
authors = ["Entaroadun <pawel.matykiewicz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sounddevice = "^0.4.6"
numpy = "^1.26.4"
scipy = "^1.12.0"
attrs = "^23.2.0"
textual = "^0.52.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"
matplotlib = "^3.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = "pulse_generator, tests"
ignore_missing_imports = true
check_untyped_defs = true

